# aiomegfile

./: .gitignore  .pyre_configuration  Makefile  README.md  pyproject.toml
.github/workflows/: publish-docs.yml  run-tests.yml
aiomegfile/: __init__.py  config.py  errors.py  interfaces.py  pathlike.py  smart.py  smart_path.py
aiomegfile/filesystem/: __init__.py  local.py  s3.py
aiomegfile/lib/: compact.py  fnmatch.py  glob.py  url.py
aiomegfile/protocol/: fs.py
docs/: aiomegfile.filesystem.local.rst  aiomegfile.rst  aiomegfile.smart.rst  aiomegfile.smart_path.rst  conf.py  index.rst  requirements.txt
tests/: test_interfaces.py  test_smart.py  test_smart_path.py  test_smart_path_dummy_filesystem.py
tests/filesystem/: test_fs.py  test_s3.py
tests/lib/: test_fnmatch.py  test_glob.py  test_url.py
tests/protocol/: test_fs.py
