[project]
name = "aiomegfile"
dynamic = ["version"]
description = "Asyncio implementation of megfile"
readme = "README.md"
authors = [
    { name = "megvii-reng", email = "megvii-reng@googlegroups.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiofiles",
]

# Better dependencies layout for uv:
# - Put user dependencies into project.optional-dependencies;
# - Put dev dependencies into dependency-group.
# However, since pytype doesn't work well with dependency-group,
# we still stick to project.optional-dependencies for now.
[project.optional-dependencies]
doc = [
    "Sphinx>=7.3.7; python_version >= '3.10'",
    "Sphinx; python_version < '3.10'",
    "m2r2",
    "sphinx-rtd-theme~=2.0",
    "sphinxcontrib-jquery",
    "sphinx-click",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock>3.6.0",
    "pytest-socket",
    "pytest-asyncio",
    "pyfakefs>=4.5",
    "mock",
    "requests-mock",
]
lint = [
    "ruff",
]
typecheck = [
    "msgspec>=0.19.0; python_version >= '3.13'",
    "pytype",
    "pyre-check~=0.9.22",
    "bandit",
    "bandit-sarif-formatter",
]
dev = [
    "aiomegfile[doc,test,lint,typecheck]",
]

[project.urls]
Homepage = "https://github.com/megvii-research/aiomegfile"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "aiomegfile/version.py"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = [
    "E402", # imports not on top of file
    "PGH004", # Use specific rule codes when using noqa
]
select = ["E", "F", "W"]
extend-select = ["I"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "F811",  # redefinition of unused name
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[tool.pytype]
# Space-separated list of files or directories to exclude.
exclude = [
    "tests/"
]
# Space-separated list of files or directories to process.
inputs = [
    "./aiomegfile"
]
# Keep going past errors to analyze as many files as possible.
keep_going = true

# All pytype output goes here.
output = ".pytype_output"

# Paths to source code directories, separated by ':'.
pythonpath = "."

# Comma separated list of error names to ignore.
disable = [
    "pyi-error"
]
# Don't report errors.
report_errors = true

# Experimental: Only load submodules that are explicitly imported.
strict_import = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
